# assembly-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
bills/: climate_action_act_2026.txt
config/: agents.yaml  rosters.yaml  simulation.yaml  system_prompts.yaml
data/: government-profiles.json  parliament.db  senate_profiles.json
docs/: Architecture.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_ARCHITECTURE.md  QUICK_START.md
output/transcripts/: session_20260401_44f934.md  session_20260401_a57c0d.md  session_20260401_e10e20.md
output/votes/: session_20260401_44f934.json  session_20260401_a57c0d.json  session_20260401_e10e20.json
src/: config_loader.py  llm_factory.py  main.py  parliament_graph.py
src/agents/: __init__.py  base_agent.py  executive_agent.py  scotus_agent.py  senator_agent.py
src/heuristics/: __init__.py  bill_analyzer.py  generate_profiles.py  profiles.py  vote_calculator.py
src/orchestration/: __init__.py  debate_manager.py  vote_aggregator.py
